--- a/app/assets/stylesheets/companies.scss
+++ b/app/assets/stylesheets/companies.scss
@@ -2,6 +2,20 @@ body {
   font-family: 'Titillium Web';  
 }
 
+
+@font-face {
+  font-family: 'Predige Rounded';
+  src: font-url('PredigeRounded-Medium.otf') format('opentype');
+  src: font-url('PredigeRounded-Medium.eot?#iefix') format('embedded-opentype'),
+       font-url('PredigeRounded-Medium.woff') format('woff'),
+       font-url('PredigeRounded-Medium.woff2') format('woff2'),
+       font-url('PredigeRounded-Medium.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+
+
 h1 {
   font-family: 'Predige Rounded';
 }
