--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,20 +1,3 @@
 
-<div id="page">
-  <h1>The Round</h1>
-  <h2>We’ve helped the most exciting and disruptive companies, and up to 3,000 engineers find each other in London and now we want to do the same in Brooklyn.</h2>
-  <h4>Tech Stack</h4>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dignissim libero ac dolor varius lobortis. Integer nec rhoncus libero. Nulla viverra porttitor enim. Fusce tellus magna, consequat nec libero et, vestibulum viverra nisl. Suspendisse id auctor libero, eu tempus risus.</p>
-  <h4>Open positions</h4>
-  <ul>
-    <li>Designer</li>
-    <li>Designer</li>
-    <li>Designer</li>
-    <li>Designer</li>
-    <li>Designer</li>
-  </ul>
-  <h4>Hiring contact</h4>
-  <p>
-    <strong>Pete Smith</strong><br/>
-    pete@theround.com
-  </p>
-</div>
+<h1>SMR's booklet making machine</h1>
+<p><%= link_to 'Companies', companies_path %><p>
