sizing and added wayfinding

--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -13,6 +13,12 @@
   <%= f.input :hiring_sunday %>
 
   <%= f.input :hiring_contact %>
+
+  <%= f.input :founded %>
+
+  <%= f.input :team_size %>
+
+  <%= f.input :right, as: :boolean %>
         
   <%= f.button :submit %>
 
