--- a/app/assets/stylesheets/companies.scss
+++ b/app/assets/stylesheets/companies.scss
@@ -17,26 +17,40 @@ body {
 
 
 
-h1 {
+
+
+#page {
+  width: 396px;
+  padding-top: 40px;
+  height: 559px;
+  margin: 30px;
+}
+
+#page .right {
+  text-align: right;
+}
+
+#page h1 {
   font-family: 'Predige Rounded';
+  font-size: 20px;
 }
 
-h2 {
+#page h2 {
   font-weight: 300;
+  font-size: 18px;
 }
 
-h4 {
+#page h4 {
   text-transform: uppercase;
-  font-size: 12px;
+  font-size: 10px;
   margin-top: 40px;
 }
 
-#page {
-  width: 525px;
-  padding-top: 40px;
-  height: 740px;
-  margin: 30px;
+#page p {
+  font-size: 12px;
 }
+
+
 
 
 
@@ -54,7 +68,7 @@ form select:focus {
 }
 
 form {
-  overflow: hidden;
+  width: 400px;
 }
 form label {
   display: block;
@@ -79,9 +93,11 @@ form textarea {
   font-weight: normal;
   margin-bottom: 10px;
   min-height: 30px;
+  font-size: 16px;
 }
 form textarea {
   border: 1px solid #ccc;
+  height: 100px;
 }
 form input[type=radio] {
   margin: 5px;
