--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,14 +1,23 @@
 
 <div id="page">
-  <h1><%= @company.name %></h1>
-  <h2><%= @company.mission %></h2>
-  <h4>Tech Stack</h4>
-  <p><%= @company.tech_stack %></p>
-  <h4>Open positions</h4>
-  <p><%= @company.hiring_saturday %></p>
-  <p><%= @company.hiring_sunday %></p>
-  <h4>Hiring contact</h4>
-  <p>
-    <%= @company.hiring_contact %>
-  </p>
+
+  <% if @company.right %>
+     <div class='right'>
+  <% else %>
+     <div>
+  <% end %>
+
+
+    <h1><%= @company.name %></h1>
+    <h2><%= @company.mission %></h2>
+    <h4>Tech Stack</h4>
+    <p><%= @company.tech_stack %></p>
+    <h4>Open positions</h4>
+    <p><%= @company.hiring_saturday %></p>
+    <p><%= @company.hiring_sunday %></p>
+    <h4>Hiring contact</h4>
+    <p>
+      <%= @company.hiring_contact %>
+    </p>
+  </div>
 </div>
