--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -7,7 +7,7 @@
      <div>
   <% end %>
 
-
+    <%= image_tag @company.logo %>
     <h1><%= @company.name %></h1>
     <h2><%= @company.mission %></h2>
     <h4>Tech Stack</h4>
