--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -3,7 +3,7 @@
 <%= simple_form_for @company do |f| %>
 
   <%= f.input :name %>
-
+  <%= f.input :logo %>
   <%= f.input :mission %>
 
   <%= f.input :tech_stack %>
@@ -17,6 +17,7 @@
   <%= f.input :founded %>
 
   <%= f.input :team_size %>
+  <%= f.input :pitch %>
 
   <%= f.input :right, as: :boolean %>
         
