--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,9 +1,10 @@
 
-All companies
-
-<% @companies.each do |company| %> 
-  <li>
-    <h2><%= link_to company.name, company_path(company) %></h2>
-    <p><%= link_to 'edit', edit_company_path(company) %>
-  </li>
+<%= form_tag import_companies_path, multipart: true do %>
+  <%= file_field_tag :file %>
+  <%= submit_tag "Import CSV" %>
 <% end %>
+
+Number of companies
+<%= @companies.count %>
+
+<%= link_to 'View all companies', '/all' %>
