--- a/app/views/wayfindings/index.html.erb
+++ b/app/views/wayfindings/index.html.erb
@@ -2,10 +2,12 @@
 All signs
 
 <% @wayfindings.each do |wayfinding| %> 
-  <li>
-    <h2><%= link_to wayfinding.first_content, wayfinding_path(wayfinding) %></h2>
-    <p><%= link_to 'edit', edit_wayfinding_path(wayfinding) %>
-  </li>
+  <ul>
+    <li><%= wayfinding.first_content %></li>
+    <li><%= wayfinding.second_content %></li>
+    <li><%= wayfinding.third_content %></li>
+  </ul>
+    <p><%= link_to 'edit', edit_wayfinding_path(wayfinding) %><p>
 <% end %>
 
 
