--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,6 +1,6 @@
 
 
-<%= simple_form_for @company do |f| %>
+<%= simple_form_for [@city, @company] do |f| %>
 
   <%= f.input :name %>
   <%= f.input :logo %>
@@ -24,3 +24,5 @@
   <%= f.button :submit %>
 
 <% end %>
+
+<%= link_to "Delete", city_company_path(@city, @company), method: :delete %>
