--- a/app/views/companies/floorplan.html.erb
+++ b/app/views/companies/floorplan.html.erb
@@ -1,5 +1,6 @@
 
-<% @companies.each do |company| %> 
-<p><span style="width: 40px"><%= company.pitch %></span> <%= company.name %></p>
-<% end %>
+<p><%= @city.name %></p>
 
+<% @companies.each do |company| %> 
+<div style="width: 40px; float:left; clear: both"><%= company.pitch %></div><span style="float: left"><%= company.name %></span>
+<% end %>
