--- a/app/views/wayfindings/new.html.erb
+++ b/app/views/wayfindings/new.html.erb
@@ -1,6 +1,6 @@
 
 
-<%= simple_form_for @wayfinding do |f| %>
+<%= simple_form_for [@city, @wayfinding] do |f| %>
 
   <%= f.input :first_content %>
   <%= f.input :second_content %>
