--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,1 +1,10 @@
 
+<h1>Cities</h1>
+
+<ul>
+<% @cities.each do |city| %> 
+  <li><%= link_to "#{city.name}", city_path(city) %></li>
+<% end %>
+</ul>
+
+<%= link_to 'new', new_city_path %>
